--- a/app/src/main/res/layout/cart_login_empty.xml
+++ b/app/src/main/res/layout/cart_login_empty.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_activity_DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -45,35 +44,47 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:id="@+id/no_internet"
+            android:background="@drawable/empty_cart_bg"
 
+            android:layout_gravity="center" />
         <TextView
             android:id="@+id/login_empty_cart_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/text_color"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             android:text="@string/cart_1"
-            android:textSize="25dp" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/login_empty_cart_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="10dp"
+            android:textSize="@dimen/space_15"
             android:layout_marginRight="10dp"
+            android:textColor="@color/text_color"
             android:text="@string/cart_3" />
 
         <Button
             android:id="@+id/login_empty_shopnow"
-            android:layout_width="fill_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:background="@drawable/button_selector_signin"
+            android:background="@drawable/round_corner_button"
             android:padding="10dp"
-            android:text="Shop Now"
+            android:text="@string/start_shopping"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/line"
@@ -103,6 +114,6 @@
 
     </FrameLayout>
 </LinearLayout>
-    <include
+<include
         layout="@layout/navigation_drawer"/>
 </android.support.v4.widget.DrawerLayout>
