--- a/app/src/main/res/layout/list_item_cart.xml
+++ b/app/src/main/res/layout/list_item_cart.xml
@@ -86,7 +86,7 @@
         android:layout_height="32dp"
         android:text="-"
         android:layout_weight="1"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="@dimen/space_8"
         android:background="@color/white"
         android:id="@+id/minus"
@@ -119,6 +119,7 @@
         android:layout_height="21dp"
         android:id="@+id/imageView3"
         android:layout_marginBottom="@dimen/space_5"
+        android:layout_marginLeft="@dimen/space_5"
         android:background="@drawable/in_stock_icon"
         android:layout_alignBottom="@+id/minus"
         android:layout_toStartOf="@+id/textView" />
