--- a/app/src/main/res/layout/order_list.xml
+++ b/app/src/main/res/layout/order_list.xml
@@ -57,7 +57,7 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="fill_parent"
-            android:layout_height="478dip" />
+            android:layout_height="wrap_content" />
 
         <!--    <FrameLayout
                 android:id="@+id/coordinator"
