--- a/app/src/main/res/layout/product_detail_activity.xml
+++ b/app/src/main/res/layout/product_detail_activity.xml
@@ -102,7 +102,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="3dp"
                 android:text="model: "
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -113,7 +113,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="28dp"
                 android:text="availability"
-                android:textSize="16dp" />
+                android:textSize="15dp" />
 
 
             <TextView
@@ -125,7 +125,7 @@
                 android:layout_marginTop="1dp"
                 android:text="price"
                 android:textColor="@color/text_color"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -136,7 +136,7 @@
                 android:layout_marginTop="33dp"
                 android:text="Ex Tax"
                 android:textColor="@color/grey"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
             <ImageButton
                 android:id="@+id/detail_add"
                 android:layout_width="53dp"
@@ -153,9 +153,22 @@
                 android:layout_marginStart="63dp"
                 android:layout_alignTop="@+id/detail_tax"
                 android:layout_toEndOf="@+id/detail_tax" />
+
         </RelativeLayout>
 
 
+     <!--       <TextView
+                android:id="@+id/add_cart_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Add to cart"
+                android:textSize="12dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="-4dp"
+                android:layout_marginRight="@dimen/space_88"
+                android:layout_alignTop="@+id/detail_avail"
+                android:layout_alignParentEnd="true" />-->
 
             <TextView
                 android:id="@+id/detail_des_txt"
@@ -166,7 +179,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:text="Description :"
-                android:textSize="15dp" />
+                android:textSize="14dp" />
 
 
             <TextView
@@ -178,7 +191,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="Description"
-            android:textSize="15dp" />
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/detail_line_2"
