--- a/app/src/main/res/layout/shipping_address_change.xml
+++ b/app/src/main/res/layout/shipping_address_change.xml
@@ -4,6 +4,28 @@
     android:orientation="vertical"
     android:background="@drawable/gridview_bg"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:minHeight="?attr/actionBarSize"
+            android:background="@drawable/header"
+            android:layout_width="match_parent"
+            android:layout_height="64dp">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:id="@+id/menu_icon"
+                android:layout_marginRight="@dimen/space_25"
+                android:layout_gravity="end"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_menu" />
+        </android.support.v7.widget.Toolbar>
+    </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -23,12 +45,13 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
+            android:layout_marginTop="@dimen/space_15"
             android:layout_marginBottom="@dimen/space_50"
             android:orientation="vertical"
             >
@@ -41,7 +64,7 @@
                 android:layout_height="22dp"
                 android:gravity="center"
                 android:layout_marginTop="10dip"
-                android:background="@android:color/holo_purple"
+                android:background="@color/text_color"
                 />
 
             <TextView
@@ -52,8 +75,8 @@
                 android:text="@string/shipping_note"
                 android:layout_marginTop="@dimen/space_5"
                 android:padding="10dp"
-                android:textColor="@color/input_register"
-                android:textColorHint="@color/input_register_hint" />
+                android:textSize="16sp"
+                />
 
             <Button
                 android:id="@+id/btnsampleee"
@@ -65,7 +88,7 @@
                 android:text="@string/address_you_entered"
                 android:textColor="@color/white"
                 android:layout_marginTop="10dip"
-                android:background="@android:color/holo_purple"
+                android:background="@color/text_color"
                 />
 
 
@@ -87,23 +110,21 @@
 
             <Button
                 android:id="@+id/use_this_address"
-                android:layout_width="305dp"
+                android:layout_width="325dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dip"
-                android:gravity="center"
-                android:background="@android:color/holo_purple"
+                android:layout_gravity="center"
+                android:background="@drawable/round_corner_button"
                 android:text="@string/use_this_address"
-                android:layout_marginLeft="@dimen/space_35"
                 android:textAlignment="center"
                 android:textColor="@color/white" />
             <Button
                 android:id="@+id/change_address"
-                android:layout_width="305dp"
+                android:layout_width="325dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dip"
-                android:layout_marginLeft="@dimen/space_35"
-                android:gravity="center"
-                android:background="@android:color/holo_purple"
+                android:layout_gravity="center"
+                android:background="@drawable/round_corner_button"
                 android:text="@string/change_address"
                 android:textAlignment="center"
                 android:textColor="@color/white" />
