--- a/app/src/main/res/layout/shopping_cart.xml
+++ b/app/src/main/res/layout/shopping_cart.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:background="@drawable/gridview_bg"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <FrameLayout
+        android:id="@+id/welcome"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:gravity="center_horizontal"
-        android:background="@color/white"
-        android:layout_marginTop="@dimen/space_1"
         android:layout_marginBottom="@dimen/space_15"
-        android:id="@+id/welcome">
+        android:layout_marginTop="@dimen/space_1"
+        android:background="@color/white"
+        android:gravity="center_horizontal">
 
         <ImageView
+            android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:src="@drawable/check_out_one"
-            android:id="@+id/button3" />
+            android:src="@drawable/check_out_one" />
 
 
     </FrameLayout>
+
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -32,155 +34,156 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-    <com.slidingimages.NestedListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_20"
-        android:paddingLeft="@dimen/space_1"
-        android:background="@drawable/rounded_corner_listview"
-        android:paddingRight="@dimen/space_1"
-        android:dividerHeight="7sp"
-        android:id="@+id/listView" />
+            <com.slidingimages.NestedListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/space_20"
+                android:layout_marginRight="@dimen/space_20"
+                android:background="@drawable/rounded_corner_listview"
+                android:dividerHeight="7sp"
+                android:paddingLeft="@dimen/space_1"
+                android:paddingRight="@dimen/space_1" />
 
-   <LinearLayout
-        android:layout_width="322dp"
-        android:layout_height="52dp"
-        android:layout_marginLeft="@dimen/space_20"
-        android:background="@drawable/rounded_corner_listview"
-        android:layout_marginTop="@dimen/space_15"
-         >
-
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="10dp"
-        android:text="@string/total_quanity"
-        android:textSize="@dimen/space_15" />
-
-    <TextView
-        android:id="@+id/total_quanity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/name"
-        android:layout_marginLeft="180dp"
-        android:textSize="@dimen/space_15"
-        android:layout_marginTop="@dimen/space_10"
-        android:layout_toRightOf="@+id/name"
-        android:text="1" >
-
-    </TextView>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="352dp"
-        android:layout_height="38dp"
-        android:layout_marginLeft="@dimen/space_20"
-        android:layout_marginTop="@dimen/space_15"
-        >
-    <TextView
-        android:id="@+id/subtotal_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:layout_marginLeft="70dp"
-        android:text="@string/sub_total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/subtotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/subtotal_text"
-            android:layout_marginLeft="10dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:paddingBottom="@dimen/space_2"
-            android:layout_toRightOf="@+id/subtotal_text"
-            android:text=":100 AED" />
+            <LinearLayout
+                android:layout_width="302dip"
+                android:layout_height="52dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/space_15"
+                android:background="@drawable/rounded_corner_listview">
 
 
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/textView1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/total_quanity"
+                    android:textSize="@dimen/space_15" />
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="352dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="@dimen/space_20"
+                <TextView
+                    android:id="@+id/total_quanity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/name"
+                    android:layout_marginLeft="180dp"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_toRightOf="@+id/name"
+                    android:text="1"
+                    android:textSize="@dimen/space_15">
 
-        >
-    <Button
-        android:id="@+id/check_out"
-        android:layout_width="305dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="@dimen/space_10"
-        android:gravity="center"
-        android:background="@drawable/round_corner_button"
-        android:text="@string/check_out"
-        android:textAlignment="center"
-        android:textColor="@color/white" />
-    </RelativeLayout>
+                </TextView>
+            </LinearLayout>
 
             <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/space_12"
-            android:gravity="center"
+                android:layout_width="352dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/space_15">
+
+                <TextView
+                    android:id="@+id/subtotal_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/textView1"
+                    android:layout_marginLeft="80dp"
+                    android:gravity="center"
+                    android:text="@string/sub_total"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/subtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/subtotal_text"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/subtotal_text"
+                    android:paddingBottom="@dimen/space_2"
+                    android:text=":100 AED"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="352dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="@dimen/space_20"
+                android:layout_gravity="center"
+                >
+
+                <Button
+                    android:id="@+id/check_out"
+                    android:layout_width="312dip"
+                    android:layout_height="52dp"
+
+                    android:background="@drawable/round_corner_button"
+
+                    android:text="@string/check_out"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/space_8"
-            android:layout_height="wrap_content">
+                android:layout_marginTop="@dimen/space_12"
+                android:gravity="center">
 
-            <TextView
-            android:id="@+id/enter_promo_code_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView1"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="16sp" android:textStyle="bold"
-            android:layout_marginLeft="15dp"
-            android:text="@string/enter_promo_code"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+                <TextView
+                    android:id="@+id/enter_promo_code_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/textView1"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="center"
+                    android:text="@string/enter_promo_code"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/promo_code"
-        android:layout_width="140dp"
-        android:layout_height="42dp"
-        android:paddingLeft="@dimen/space_8"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/rounded_corner_listview"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="10dp"
-        android:textSize="15dp"
-        android:textColorHint="@color/black"
-        android:hint="@string/promo_code"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+                <EditText
+                    android:id="@+id/promo_code"
+                    android:layout_width="140dp"
+                    android:layout_height="42dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/textView1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/rounded_corner_listview"
+                    android:hint="@string/promo_code"
+                    android:paddingLeft="@dimen/space_8"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColorHint="@color/black"
+                    android:textSize="15dp" />
 
-    <Button
-        android:id="@+id/apply"
-        android:layout_width="87dp"
-        android:layout_height="38dp"
-        android:layout_alignBottom="@+id/promo_code"
-        android:layout_marginLeft="15dp"
-        android:background="@drawable/round_corner_button"
-        android:layout_marginBottom="@dimen/space_3"
-        android:textColor="@color/white"
-        android:layout_toRightOf="@+id/promo_code"
-       android:text="@string/apply">
-    </Button>
+                <Button
+                    android:id="@+id/apply"
+                    android:layout_width="87dp"
+                    android:layout_height="38dp"
+                    android:layout_alignBottom="@+id/promo_code"
+                    android:layout_marginBottom="@dimen/space_3"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/promo_code"
+                    android:background="@drawable/round_corner_button"
+                    android:text="@string/apply"
+                    android:textColor="@color/white"></Button>
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+
     <FrameLayout
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
